# investor-holdings

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b04110fe742_initial.py  12a8e9f6b08f_add_transaction_summary.py  daa9c35b99fe_add_research_summary.py
backend/app/: main.py
backend/app/api/: alerts.py  deps.py  holdings.py  investors.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: __init__.py  alert.py  filing.py  holding.py  investor.py
backend/app/schemas/: __init__.py  alerts.py  filings.py  holdings.py  investors.py
backend/app/services/: alerts.py  diff.py  edgar.py  llm.py
backend/app/workers/: tasks.py
backend/scripts/: backfill_summaries.py  backfill_tickers.py
backend/tests/: conftest.py  test_api.py  test_diff.py  test_edgar_parsers.py
backend/tests/fixtures/edgar/: 13d_primary_doc.xml  13dga_sgml_header.sgml  13f_sample.xml
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/investors/: page.tsx
frontend/app/investors/[id]/: page.tsx
frontend/components/: Nav.tsx
frontend/components/filings/: FilingCard.tsx  HoldingsTable.tsx
frontend/components/ui/: badge.tsx  button.tsx  input.tsx
frontend/lib/: api.ts  utils.ts
